@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,13 +22,8 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-package jdk.internal.foreign.abi;
 
-import java.lang.classfile.ClassFile;
-import java.lang.classfile.CodeBuilder;
-import java.lang.classfile.Label;
-import java.lang.classfile.Opcode;
-import java.lang.classfile.TypeKind;
+package jdk.internal.foreign.abi;
 
 import jdk.internal.foreign.AbstractMemorySegmentImpl;
 import jdk.internal.foreign.MemorySessionImpl;
@@ -46,15 +41,26 @@ import jdk.internal.foreign.abi.Binding.ShiftLeft;
 import jdk.internal.foreign.abi.Binding.ShiftRight;
 import jdk.internal.foreign.abi.Binding.VMLoad;
 import jdk.internal.foreign.abi.Binding.VMStore;
-import sun.security.action.GetBooleanAction;
-import sun.security.action.GetPropertyAction;
+import jdk.internal.vm.annotation.ForceInline;
 
 import java.io.IOException;
+import java.lang.classfile.Annotation;
+import java.lang.classfile.ClassFile;
+import java.lang.classfile.CodeBuilder;
+import java.lang.classfile.Label;
+import java.lang.classfile.Opcode;
+import java.lang.classfile.TypeKind;
+import java.lang.classfile.attribute.RuntimeVisibleAnnotationsAttribute;
 import java.lang.constant.ClassDesc;
 import java.lang.constant.ConstantDesc;
 import java.lang.constant.DynamicConstantDesc;
 import java.lang.constant.MethodTypeDesc;
-import java.lang.foreign.*;
+import java.lang.foreign.AddressLayout;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
@@ -67,16 +73,19 @@ import java.util.Arrays;
 import java.util.Deque;
 import java.util.List;
 
-import static java.lang.constant.ConstantDescs.*;
 import static java.lang.classfile.ClassFile.*;
-import static java.lang.classfile.TypeKind.*;
+import static java.lang.classfile.TypeKind.LONG;
+import static java.lang.classfile.TypeKind.REFERENCE;
+import static java.lang.constant.ConstantDescs.*;
 import static jdk.internal.constant.ConstantUtils.*;
 
 public class BindingSpecializer {
     private static final String DUMP_CLASSES_DIR
-        = GetPropertyAction.privilegedGetProperty("jdk.internal.foreign.abi.Specializer.DUMP_CLASSES_DIR");
+            = System.getProperty("jdk.internal.foreign.abi.Specializer.DUMP_CLASSES_DIR");
     private static final boolean PERFORM_VERIFICATION
-        = GetBooleanAction.privilegedGetProperty("jdk.internal.foreign.abi.Specializer.PERFORM_VERIFICATION");
+            = Boolean.getBoolean("jdk.internal.foreign.abi.Specializer.PERFORM_VERIFICATION");
+    private static final int SCOPE_DEDUP_DEPTH
+            = Integer.getInteger("jdk.internal.foreign.abi.Specializer.SCOPE_DEDUP_DEPTH", 2);
 
     // Bunch of helper constants
     private static final int CLASSFILE_VERSION = ClassFileFormatVersion.latest().major();
@@ -99,6 +108,7 @@ public class BindingSpecializer {
     private static final ClassDesc CD_ValueLayout_OfFloat = referenceClassDesc(ValueLayout.OfFloat.class);
     private static final ClassDesc CD_ValueLayout_OfDouble = referenceClassDesc(ValueLayout.OfDouble.class);
     private static final ClassDesc CD_AddressLayout = referenceClassDesc(AddressLayout.class);
+    private static final ClassDesc CD_ForceInline = referenceClassDesc(ForceInline.class);
 
     private static final MethodTypeDesc MTD_NEW_BOUNDED_ARENA = MethodTypeDesc.of(CD_Arena, CD_long);
     private static final MethodTypeDesc MTD_NEW_EMPTY_ARENA = MethodTypeDesc.of(CD_Arena);
@@ -193,12 +203,12 @@ public class BindingSpecializer {
                                            CallingSequence callingSequence, ABIDescriptor abi) {
         String className = callingSequence.forDowncall() ? CLASS_NAME_DOWNCALL : CLASS_NAME_UPCALL;
         byte[] bytes = ClassFile.of().build(ClassDesc.ofInternalName(className), clb -> {
-            clb.withFlags(ACC_PUBLIC + ACC_FINAL + ACC_SUPER);
-            clb.withSuperclass(CD_Object);
-            clb.withVersion(CLASSFILE_VERSION, 0);
-
-            clb.withMethodBody(METHOD_NAME, methodTypeDesc(callerMethodType), ACC_PUBLIC | ACC_STATIC,
-                    cb -> new BindingSpecializer(cb, callerMethodType, callingSequence, abi, leafType).specialize());
+            clb.withFlags(ACC_PUBLIC + ACC_FINAL + ACC_SUPER)
+               .withSuperclass(CD_Object)
+               .withVersion(CLASSFILE_VERSION, 0)
+               .withMethod(METHOD_NAME, methodTypeDesc(callerMethodType), ACC_PUBLIC | ACC_STATIC,
+                    mb -> mb.with(RuntimeVisibleAnnotationsAttribute.of(Annotation.of(CD_ForceInline)))
+                            .withCode(cb -> new BindingSpecializer(cb, callerMethodType, callingSequence, abi, leafType).specialize()));
         });
 
         if (DUMP_CLASSES_DIR != null) {
@@ -273,10 +283,10 @@ public class BindingSpecializer {
             int numScopes = 0;
             for (int i = 0; i < callerMethodType.parameterCount(); i++) {
                 if (shouldAcquire(i)) {
-                    int scopeLocal = cb.allocateLocal(ReferenceType);
+                    int scopeLocal = cb.allocateLocal(REFERENCE);
                     initialScopeSlots[numScopes++] = scopeLocal;
-                    cb.loadConstant(null);
-                    cb.storeLocal(ReferenceType, scopeLocal); // need to initialize all scope locals here in case an exception occurs
+                    cb.aconst_null()
+                      .astore(scopeLocal); // need to initialize all scope locals here in case an exception occurs
                 }
             }
             scopeSlots = Arrays.copyOf(initialScopeSlots, numScopes); // fit to size
@@ -285,23 +295,23 @@ public class BindingSpecializer {
 
         // create a Binding.Context for this call
         if (callingSequence.allocationSize() != 0) {
-            cb.loadConstant(callingSequence.allocationSize());
-            cb.invokestatic(CD_SharedUtils, "newBoundedArena", MTD_NEW_BOUNDED_ARENA);
+            cb.loadConstant(callingSequence.allocationSize())
+              .invokestatic(CD_SharedUtils, "newBoundedArena", MTD_NEW_BOUNDED_ARENA);
         } else if (callingSequence.forUpcall() && needsSession()) {
             cb.invokestatic(CD_SharedUtils, "newEmptyArena", MTD_NEW_EMPTY_ARENA);
         } else {
             cb.getstatic(CD_SharedUtils, "DUMMY_ARENA", CD_Arena);
         }
-        contextIdx = cb.allocateLocal(ReferenceType);
-        cb.storeLocal(ReferenceType, contextIdx);
+        contextIdx = cb.allocateLocal(REFERENCE);
+        cb.astore(contextIdx);
 
         // in case the call needs a return buffer, allocate it here.
         // for upcalls the VM wrapper stub allocates the buffer.
         if (callingSequence.needsReturnBuffer() && callingSequence.forDowncall()) {
             emitLoadInternalAllocator();
             emitAllocateCall(callingSequence.returnBufferSize(), 1);
-            returnBufferIdx = cb.allocateLocal(ReferenceType);
-            cb.storeLocal(ReferenceType, returnBufferIdx);
+            returnBufferIdx = cb.allocateLocal(REFERENCE);
+            cb.astore(returnBufferIdx);
         }
 
         Label tryStart = cb.newLabel();
@@ -324,7 +334,7 @@ public class BindingSpecializer {
                 // for downcalls, recipes have an input value, which we set up here
                 if (callingSequence.needsReturnBuffer() && i == 0) {
                     assert returnBufferIdx != -1;
-                    cb.loadLocal(ReferenceType, returnBufferIdx);
+                    cb.aload(returnBufferIdx);
                     pushType(MemorySegment.class);
                 } else {
                     emitGetInput();
@@ -339,8 +349,8 @@ public class BindingSpecializer {
                 if (callingSequence.needsReturnBuffer() && i == 0) {
                     // return buffer ptr is wrapped in a MemorySegment above, but not passed to the leaf handle
                     popType(MemorySegment.class);
-                    returnBufferIdx = cb.allocateLocal(ReferenceType);
-                    cb.storeLocal(ReferenceType, returnBufferIdx);
+                    returnBufferIdx = cb.allocateLocal(REFERENCE);
+                    cb.astore(returnBufferIdx);
                 } else {
                     // for upcalls the recipe result is an argument to the leaf handle
                     emitSetOutput(typeStack.pop());
@@ -355,7 +365,7 @@ public class BindingSpecializer {
         if (callingSequence.forDowncall()) {
             cb.loadConstant(CLASS_DATA_DESC);
         } else {
-            cb.loadLocal(ReferenceType, 0); // load target arg
+            cb.aload(0); // load target arg
         }
         cb.checkcast(CD_MethodHandle);
         // load all the leaf args
@@ -496,32 +506,39 @@ public class BindingSpecializer {
     }
 
     private void emitAcquireScope() {
-        cb.checkcast(CD_AbstractMemorySegmentImpl);
-        cb.invokevirtual(CD_AbstractMemorySegmentImpl, "sessionImpl", MTD_SESSION_IMPL);
+        cb.checkcast(CD_AbstractMemorySegmentImpl)
+          .invokevirtual(CD_AbstractMemorySegmentImpl, "sessionImpl", MTD_SESSION_IMPL);
         Label skipAcquire = cb.newLabel();
         Label end = cb.newLabel();
 
         // start with 1 scope to maybe acquire on the stack
         assert curScopeLocalIdx != -1;
-        boolean hasOtherScopes = curScopeLocalIdx != 0;
-        for (int i = 0; i < curScopeLocalIdx; i++) {
-            cb.dup(); // dup for comparison
-            cb.loadLocal(ReferenceType, scopeSlots[i]);
-            cb.if_acmpeq(skipAcquire);
+        boolean hasLookup = false;
+
+        // Here we check if the current scope has not been already acquired.
+        // To do that, we generate many comparisons (one per cached scope).
+        // Note that we always skip comparisons against the very first cached scope
+        // (as that is the function address, which typically belongs to another scope).
+        // We also stop the comparisons at SCOPE_DEDUP_DEPTH, to keep a lid on the size
+        // of the generated code.
+        for (int i = 1; i < curScopeLocalIdx && i <= SCOPE_DEDUP_DEPTH; i++) {
+            cb.dup() // dup for comparison
+              .aload(scopeSlots[i])
+              .if_acmpeq(skipAcquire);
+            hasLookup = true;
         }
 
         // 1 scope to acquire on the stack
         cb.dup();
         int nextScopeLocal = scopeSlots[curScopeLocalIdx++];
         // call acquire first here. So that if it fails, we don't call release
-        cb.invokevirtual(CD_MemorySessionImpl, "acquire0", MTD_ACQUIRE0); // call acquire on the other
-        cb.storeLocal(ReferenceType, nextScopeLocal); // store off one to release later
+        cb.invokevirtual(CD_MemorySessionImpl, "acquire0", MTD_ACQUIRE0) // call acquire on the other
+          .astore(nextScopeLocal); // store off one to release later
 
-        if (hasOtherScopes) { // avoid ASM generating a bunch of nops for the dead code
-            cb.goto_(end);
-
-            cb.labelBinding(skipAcquire);
-            cb.pop(); // drop scope
+        if (hasLookup) { // avoid ASM generating a bunch of nops for the dead code
+            cb.goto_(end)
+                    .labelBinding(skipAcquire)
+                    .pop(); // drop scope
         }
 
         cb.labelBinding(end);
@@ -529,10 +546,10 @@ public class BindingSpecializer {
 
     private void emitReleaseScopes() {
         for (int scopeLocal : scopeSlots) {
-            cb.loadLocal(ReferenceType, scopeLocal);
-            cb.ifThen(Opcode.IFNONNULL, ifCb -> {
-                ifCb.loadLocal(ReferenceType, scopeLocal);
-                ifCb.invokevirtual(CD_MemorySessionImpl, "release0", MTD_RELEASE0);
+            cb.aload(scopeLocal)
+              .ifThen(Opcode.IFNONNULL, ifCb -> {
+                ifCb.aload(scopeLocal)
+                    .invokevirtual(CD_MemorySessionImpl, "release0", MTD_RELEASE0);
             });
         }
     }
@@ -551,28 +568,28 @@ public class BindingSpecializer {
 
     private void emitLoadInternalSession() {
         assert contextIdx != -1;
-        cb.loadLocal(ReferenceType, contextIdx);
-        cb.checkcast(CD_Arena);
-        cb.invokeinterface(CD_Arena, "scope", MTD_SCOPE);
-        cb.checkcast(CD_MemorySessionImpl);
+        cb.aload(contextIdx)
+          .checkcast(CD_Arena)
+          .invokeinterface(CD_Arena, "scope", MTD_SCOPE)
+          .checkcast(CD_MemorySessionImpl);
     }
 
     private void emitLoadInternalAllocator() {
         assert contextIdx != -1;
-        cb.loadLocal(ReferenceType, contextIdx);
+        cb.aload(contextIdx);
     }
 
     private void emitCloseContext() {
         assert contextIdx != -1;
-        cb.loadLocal(ReferenceType, contextIdx);
-        cb.checkcast(CD_Arena);
-        cb.invokeinterface(CD_Arena, "close", MTD_CLOSE);
+        cb.aload(contextIdx)
+          .checkcast(CD_Arena)
+          .invokeinterface(CD_Arena, "close", MTD_CLOSE);
     }
 
     private void emitBoxAddress(BoxAddress boxAddress) {
         popType(long.class);
-        cb.loadConstant(boxAddress.size());
-        cb.loadConstant(boxAddress.align());
+        cb.loadConstant(boxAddress.size())
+          .loadConstant(boxAddress.align());
         if (needsSession()) {
             emitLoadInternalSession();
             cb.invokestatic(CD_Utils, "longToAddress", MTD_LONG_TO_ADDRESS_SCOPE);
@@ -585,7 +602,7 @@ public class BindingSpecializer {
     private void emitAllocBuffer(Allocate binding) {
         if (callingSequence.forDowncall()) {
             assert returnAllocatorIdx != -1;
-            cb.loadLocal(ReferenceType, returnAllocatorIdx);
+            cb.aload(returnAllocatorIdx);
         } else {
             emitLoadInternalAllocator();
         }
@@ -607,8 +624,8 @@ public class BindingSpecializer {
             cb.storeLocal(storeTypeKind, valueIdx);
 
             ClassDesc valueLayoutType = emitLoadLayoutConstant(storeType);
-            cb.loadConstant(offset);
-            cb.loadLocal(storeTypeKind, valueIdx);
+            cb.loadConstant(offset)
+              .loadLocal(storeTypeKind, valueIdx);
             MethodTypeDesc descriptor = MethodTypeDesc.of(CD_void, valueLayoutType, CD_long, classDesc(storeType));
             cb.invokeinterface(CD_MemorySegment, "set", descriptor);
         } else {
@@ -618,10 +635,10 @@ public class BindingSpecializer {
             } else {
                 assert storeType == long.class; // chunking only for int and long
             }
-            int longValueIdx = cb.allocateLocal(LongType);
-            cb.storeLocal(LongType, longValueIdx);
-            int writeAddrIdx = cb.allocateLocal(ReferenceType);
-            cb.storeLocal(ReferenceType, writeAddrIdx);
+            int longValueIdx = cb.allocateLocal(LONG);
+            cb.lstore(longValueIdx);
+            int writeAddrIdx = cb.allocateLocal(REFERENCE);
+            cb.astore(writeAddrIdx);
 
             int remaining = byteWidth;
             int chunkOffset = 0;
@@ -648,25 +665,25 @@ public class BindingSpecializer {
                 //int writeChunk = (int) (((0xFFFF_FFFFL << shiftAmount) & longValue) >>> shiftAmount);
                 int shiftAmount = chunkOffset * Byte.SIZE;
                 mask = mask << shiftAmount;
-                cb.loadLocal(LongType, longValueIdx);
-                cb.loadConstant(mask);
-                cb.land();
+                cb.lload(longValueIdx)
+                  .loadConstant(mask)
+                  .land();
                 if (shiftAmount != 0) {
-                    cb.loadConstant(shiftAmount);
-                    cb.lushr();
+                    cb.loadConstant(shiftAmount)
+                      .lushr();
                 }
                 cb.l2i();
                 TypeKind chunkStoreTypeKind = TypeKind.from(chunkStoreType);
                 int chunkIdx = cb.allocateLocal(chunkStoreTypeKind);
-                cb.storeLocal(chunkStoreTypeKind, chunkIdx);
+                cb.storeLocal(chunkStoreTypeKind, chunkIdx)
                 // chunk done, now write it
 
                 //writeAddress.set(JAVA_SHORT_UNALIGNED, offset, writeChunk);
-                cb.loadLocal(ReferenceType, writeAddrIdx);
+                  .aload(writeAddrIdx);
                 ClassDesc valueLayoutType = emitLoadLayoutConstant(chunkStoreType);
                 long writeOffset = offset + SharedUtils.pickChunkOffset(chunkOffset, byteWidth, chunkSize);
-                cb.loadConstant(writeOffset);
-                cb.loadLocal(chunkStoreTypeKind, chunkIdx);
+                cb.loadConstant(writeOffset)
+                  .loadLocal(chunkStoreTypeKind, chunkIdx);
                 MethodTypeDesc descriptor = MethodTypeDesc.of(CD_void, valueLayoutType, CD_long, classDesc(chunkStoreType));
                 cb.invokeinterface(CD_MemorySegment, "set", descriptor);
 
@@ -690,16 +707,16 @@ public class BindingSpecializer {
             if (!callingSequence.needsReturnBuffer()) {
                 emitSaveReturnValue(storeType);
             } else {
-                int valueIdx = cb.allocateLocal(storeTypeKind);
-                cb.storeLocal(storeTypeKind, valueIdx); // store away the stored value, need it later
-
                 assert returnBufferIdx != -1;
-                cb.loadLocal(ReferenceType, returnBufferIdx);
+                int valueIdx = cb.allocateLocal(storeTypeKind);
+                cb.storeLocal(storeTypeKind, valueIdx) // store away the stored value, need it later
+                  .aload(returnBufferIdx);
                 ClassDesc valueLayoutType = emitLoadLayoutConstant(storeType);
-                cb.loadConstant(retBufOffset);
-                cb.loadLocal(storeTypeKind, valueIdx);
-                MethodTypeDesc descriptor = MethodTypeDesc.of(CD_void, valueLayoutType, CD_long, classDesc(storeType));
-                cb.invokeinterface(CD_MemorySegment, "set", descriptor);
+                cb.loadConstant(retBufOffset)
+                  .loadLocal(storeTypeKind, valueIdx)
+                  .invokeinterface(CD_MemorySegment,
+                        "set",
+                        MethodTypeDesc.of(CD_void, valueLayoutType, CD_long, classDesc(storeType)));
                 retBufOffset += abi.arch.typeSize(vmStore.storage().type());
             }
         }
@@ -714,11 +731,12 @@ public class BindingSpecializer {
                 emitRestoreReturnValue(loadType);
             } else {
                 assert returnBufferIdx != -1;
-                cb.loadLocal(ReferenceType, returnBufferIdx);
+                cb.aload(returnBufferIdx);
                 ClassDesc valueLayoutType = emitLoadLayoutConstant(loadType);
-                cb.loadConstant(retBufOffset);
-                MethodTypeDesc descriptor = MethodTypeDesc.of(classDesc(loadType), valueLayoutType, CD_long);
-                cb.invokeinterface(CD_MemorySegment, "get", descriptor);
+                cb.loadConstant(retBufOffset)
+                  .invokeinterface(CD_MemorySegment,
+                          "get",
+                          MethodTypeDesc.of(classDesc(loadType), valueLayoutType, CD_long));
                 retBufOffset += abi.arch.typeSize(vmLoad.storage().type());
                 pushType(loadType);
             }
@@ -736,15 +754,15 @@ public class BindingSpecializer {
 
     private void emitShiftLeft(ShiftLeft shiftLeft) {
         popType(long.class);
-        cb.loadConstant(shiftLeft.shiftAmount() * Byte.SIZE);
-        cb.lshl();
+        cb.loadConstant(shiftLeft.shiftAmount() * Byte.SIZE)
+          .lshl();
         pushType(long.class);
     }
 
     private void emitShiftRight(ShiftRight shiftRight) {
         popType(long.class);
-        cb.loadConstant(shiftRight.shiftAmount() * Byte.SIZE);
-        cb.lushr();
+        cb.loadConstant(shiftRight.shiftAmount() * Byte.SIZE)
+          .lushr();
         pushType(long.class);
     }
 
@@ -758,11 +776,10 @@ public class BindingSpecializer {
                 // implement least significant byte non-zero test
 
                 // select first byte
-                cb.loadConstant(0xFF);
-                cb.iand();
-
-                // convert to boolean
-                cb.invokestatic(CD_Utils, "byteToBoolean", MTD_BYTE_TO_BOOLEAN);
+                cb.loadConstant(0xFF)
+                  .iand()
+                  // convert to boolean
+                  .invokestatic(CD_Utils, "byteToBoolean", MTD_BYTE_TO_BOOLEAN);
             }
             case INT_TO_BYTE -> cb.i2b();
             case INT_TO_CHAR -> cb.i2c();
@@ -782,8 +799,8 @@ public class BindingSpecializer {
 
     private void emitSegmentBase() {
         popType(MemorySegment.class);
-        cb.checkcast(CD_AbstractMemorySegmentImpl);
-        cb.invokevirtual(CD_AbstractMemorySegmentImpl, "unsafeGetBase", MTD_UNSAFE_GET_BASE);
+        cb.checkcast(CD_AbstractMemorySegmentImpl)
+          .invokevirtual(CD_AbstractMemorySegmentImpl, "unsafeGetBase", MTD_UNSAFE_GET_BASE);
         pushType(Object.class);
     }
 
@@ -791,11 +808,11 @@ public class BindingSpecializer {
         popType(MemorySegment.class);
 
         if (!segmentOffset.allowHeap()) {
-            cb.dup();
-            cb.invokestatic(CD_SharedUtils, "checkNative", MTD_CHECK_NATIVE);
+            cb.dup()
+              .invokestatic(CD_SharedUtils, "checkNative", MTD_CHECK_NATIVE);
         }
-        cb.checkcast(CD_AbstractMemorySegmentImpl);
-        cb.invokevirtual(CD_AbstractMemorySegmentImpl, "unsafeGetOffset", MTD_UNSAFE_GET_OFFSET);
+        cb.checkcast(CD_AbstractMemorySegmentImpl)
+          .invokevirtual(CD_AbstractMemorySegmentImpl, "unsafeGetOffset", MTD_UNSAFE_GET_OFFSET);
 
         pushType(long.class);
     }
@@ -809,17 +826,17 @@ public class BindingSpecializer {
 
         if (SharedUtils.isPowerOfTwo(byteWidth)) {
             ClassDesc valueLayoutType = emitLoadLayoutConstant(loadType);
-            cb.loadConstant(offset);
-            MethodTypeDesc descriptor = MethodTypeDesc.of(classDesc(loadType), valueLayoutType, CD_long);
-            cb.invokeinterface(CD_MemorySegment, "get", descriptor);
+            cb.loadConstant(offset)
+              .invokeinterface(CD_MemorySegment,
+                      "get",
+                      MethodTypeDesc.of(classDesc(loadType), valueLayoutType, CD_long));
         } else {
             // chunked
-            int readAddrIdx = cb.allocateLocal(ReferenceType);
-            cb.storeLocal(ReferenceType, readAddrIdx);
-
-            cb.loadConstant(0L); // result
-            int resultIdx = cb.allocateLocal(LongType);
-            cb.storeLocal(LongType, resultIdx);
+            int readAddrIdx = cb.allocateLocal(REFERENCE);
+            cb.astore(readAddrIdx)
+              .loadConstant(0L); // result
+            int resultIdx = cb.allocateLocal(LONG);
+            cb.lstore(resultIdx);
 
             int remaining = byteWidth;
             int chunkOffset = 0;
@@ -848,30 +865,30 @@ public class BindingSpecializer {
                         throw new IllegalStateException("Unexpected chunk size for chunked write: " + chunkSize);
                 }
                 // read from segment
-                cb.loadLocal(ReferenceType, readAddrIdx);
+                cb.aload(readAddrIdx);
                 ClassDesc valueLayoutType = emitLoadLayoutConstant(chunkType);
                 MethodTypeDesc descriptor = MethodTypeDesc.of(classDesc(chunkType), valueLayoutType, CD_long);
                 long readOffset = offset + SharedUtils.pickChunkOffset(chunkOffset, byteWidth, chunkSize);
-                cb.loadConstant(readOffset);
-                cb.invokeinterface(CD_MemorySegment, "get", descriptor);
-                cb.invokestatic(toULongHolder, "toUnsignedLong", toULongDescriptor);
+                cb.loadConstant(readOffset)
+                  .invokeinterface(CD_MemorySegment, "get", descriptor)
+                  .invokestatic(toULongHolder, "toUnsignedLong", toULongDescriptor);
 
                 // shift to right offset
                 int shiftAmount = chunkOffset * Byte.SIZE;
                 if (shiftAmount != 0) {
-                    cb.loadConstant(shiftAmount);
-                    cb.lshl();
+                    cb.loadConstant(shiftAmount)
+                      .lshl();
                 }
                 // add to result
-                cb.loadLocal(LongType, resultIdx);
-                cb.lor();
-                cb.storeLocal(LongType, resultIdx);
+                cb.lload(resultIdx)
+                  .lor()
+                  .lstore(resultIdx);
 
                 remaining -= chunkSize;
                 chunkOffset += chunkSize;
             } while (remaining != 0);
 
-            cb.loadLocal(LongType, resultIdx);
+            cb.lload(resultIdx);
             if (loadType == int.class) {
                 cb.l2i();
             } else {
@@ -897,20 +914,19 @@ public class BindingSpecializer {
         emitLoadInternalAllocator();
         emitAllocateCall(size, alignment);
         cb.dup();
-        int storeIdx = cb.allocateLocal(ReferenceType);
-        cb.storeLocal(ReferenceType, storeIdx);
-        cb.loadConstant(0L);
-        cb.loadConstant(size);
-        cb.invokestatic(CD_MemorySegment, "copy", MTD_COPY, true);
-
-        cb.loadLocal(ReferenceType, storeIdx);
+        int storeIdx = cb.allocateLocal(REFERENCE);
+        cb.astore(storeIdx)
+          .loadConstant(0L)
+          .loadConstant(size)
+          .invokestatic(CD_MemorySegment, "copy", MTD_COPY, true)
+          .aload(storeIdx);
         pushType(MemorySegment.class);
     }
 
     private void emitAllocateCall(long size, long alignment) {
-        cb.loadConstant(size);
-        cb.loadConstant(alignment);
-        cb.invokeinterface(CD_SegmentAllocator, "allocate", MTD_ALLOCATE);
+        cb.loadConstant(size)
+          .loadConstant(alignment)
+          .invokeinterface(CD_SegmentAllocator, "allocate", MTD_ALLOCATE);
     }
 
     private ClassDesc emitLoadLayoutConstant(Class<?> type) {
@@ -982,11 +998,11 @@ public class BindingSpecializer {
 
     private void emitConstZero(TypeKind kind) {
         switch (kind) {
-            case BooleanType, ByteType, ShortType, CharType, IntType -> cb.iconst_0();
-            case LongType -> cb.lconst_0();
-            case FloatType -> cb.fconst_0();
-            case DoubleType -> cb.dconst_0();
-            case ReferenceType -> cb.aconst_null();
+            case BOOLEAN, BYTE, SHORT, CHAR, INT -> cb.iconst_0();
+            case LONG -> cb.lconst_0();
+            case FLOAT -> cb.fconst_0();
+            case DOUBLE -> cb.dconst_0();
+            case REFERENCE -> cb.aconst_null();
         }
     }
 }
