@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,6 @@
 package dom;
 
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.w3c.dom.DOMImplementation;
 import org.w3c.dom.bootstrap.DOMImplementationRegistry;
@@ -33,11 +32,9 @@ import org.w3c.dom.bootstrap.DOMImplementationRegistry;
  * @test
  * @bug 6367542
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow dom.Bug6367542
  * @run testng/othervm dom.Bug6367542
  * @summary Test DOMImplementationRegistry.getDOMImplementation("XML") returns a DOMImplementation instance.
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class Bug6367542 {
 
     @Test
