@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,7 +31,7 @@ import javax.swing.JButton;
 /**
  * @test
  * @bug 4141523
- * @run main/othervm/policy=java.policy -Djava.security.manager LoadingStandardIcons
+ * @run main LoadingStandardIcons
  */
 public final class LoadingStandardIcons {
 
